// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Link Cta variant with icon renders correctly 1`] = `
<test>
  <a
    aria-label="Read more about the CTA link component"
    class="ecl-link ecl-link--cta ecl-link--icon ecl-link--icon-after"
    href="/example#link-cta"
  >
    <span
      class="ecl-link__label"
    >
      Call to action link
    </span>
     
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-icon--rotate-90 ecl-link__icon"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--corner-arrow"
      />
    </svg>
  </a>
</test>
`;

exports[`EC - Link Default renders correctly 1`] = `
<test>
  <a
    aria-label="Read more about the European Union"
    class="ecl-link ecl-link--default"
    href="/example#link-default"
  >
    The European Union
  </a>
</test>
`;

exports[`EC - Link Standalone renders correctly 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone"
    href="/example#link-standalone"
  >
    Standalone link
  </a>
</test>
`;

exports[`EC - Link Standalone with missing icon name renders correctly 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone"
    href="/example#link-standalone"
  >
    Standalone link with icon
  </a>
</test>
`;

exports[`EC - Link With icon after renders correctly 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
    href="/example#link-standalone"
  >
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
     
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--external"
      />
    </svg>
  </a>
</test>
`;

exports[`EC - Link With icon after renders correctly with extra attributes 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    href="/example#link-standalone"
  >
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
     
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--external"
      />
    </svg>
  </a>
</test>
`;

exports[`EC - Link With icon after renders correctly with extra class names 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after custom-class custom-class--test"
    href="/example#link-standalone"
  >
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
     
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--external"
      />
    </svg>
  </a>
</test>
`;

exports[`EC - Link With icon before renders correctly 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before"
    href="/example#link-standalone"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon ecl-test-extra-class"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--external"
      />
    </svg>
     
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
  </a>
</test>
`;

exports[`EC - Link With two icons after renders correctly 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
    href="/example#link-standalone"
  >
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
     
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--external"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--download"
      />
    </svg>
  </a>
</test>
`;

exports[`EC - Link With two icons after renders correctly with extra class names 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone custom-class custom-class--test"
    href="/example#link-standalone"
  >
    Standalone link
  </a>
</test>
`;

exports[`EC - Link With two icons before renders correctly 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before"
    href="/example#link-standalone"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--external"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--download"
      />
    </svg>
     
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
  </a>
</test>
`;

exports[`EC - Link With two icons before renders correctly with extra class names 1`] = `
<test>
  <a
    aria-label="Read more about the Standalone link"
    class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-before custom-class custom-class--test"
    href="/example#link-standalone"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--external"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--fluid ecl-link__icon"
      focusable="false"
    >
      <use
        xlink:href="static/icons.svg#ui--download"
      />
    </svg>
     
    <span
      class="ecl-link__label"
    >
      Standalone link with icon
    </span>
  </a>
</test>
`;

exports[`EC - Link with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <a
    class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after"
    href=""
  >
    <span
      class="ecl-link__label"
    />
     
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--m ecl-link__icon"
      focusable="false"
    >
      <use
        xlink:href="#check-filled"
      />
    </svg>
    <!-- ecl2-compliance: icon -->
    <div
      class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
    >
      <p
        class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
      >
        [icon] - {{ icon.name }} and {{ icon.path }} properties need to set and filled in.
      </p>
    </div>
  </a>
  <!-- ecl2-compliance: link--standalone -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [link--standalone] - {{ link.label }} and none of {{ link.icon_position }}, {{ icon.name }}, {{ icon.path }} or {{ icon.type }} can be empty at the same time, an unusable link would be generated otherwise
    </p>
  </div>
</test>
`;
